# app/src/models/acronym.js
@@ -27,18 +27,6 @@ module.exports = (sequelize, DataTypes) => {
       allowNull: false,
       comment: 'Description of the application',
       type: DataTypes.STRING(255)
-    },
-    permissionWebade: {
-      allowNull: false,
-      comment: 'Flag stating whether this acronym can use WebADE',
-      defaultValue: false,
-      type: DataTypes.BOOLEAN
-    },
-    permissionWebadeNrosDms: {
-      allowNull: false,
-      comment: 'Flag stating whether this acronym can grant access to NROS documents through DMS',
-      defaultValue: false,
-      type: DataTypes.BOOLEAN
     }
   }, {
     comment: 'List of all valid application acronyms',
